--- a/home.html
+++ b/home.html
@@ -381,6 +381,9 @@
 
     /* Responsive Styling */
     @media (max-width: 992px) {
+      #navLinks{
+        display: block;
+      }
       .container {
         width: 90%;
       }
